tests/ui/traits/trait-upcasting/issue-11515.current.stderr
error[E0658]: cannot cast `dyn Fn()` to `dyn FnMut()`, trait upcasting coercion is experimental
  --> $DIR/issue-11515.rs:11:38
   |
LL |     let test = Box::new(Test { func: closure });
   |                                      ^^^^^^^
   |
   = note: see issue #65991 <https://github.com/rust-lang/rust/issues/65991> for more information
   = help: add `#![feature(trait_upcasting)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: required when coercing `Box<(dyn Fn() + 'static)>` into `Box<(dyn FnMut() + 'static)>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
